--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,13 @@ description = ""
 authors = ["ChrisRBe <chrisrbe@outlook.com>"]
 readme = "README.md"
 
+[tool.poetry.scripts]
+pdf-organizer = "pdf_organizer.main:app"
+
 [tool.poetry.dependencies]
 python = "^3.12"
 typer = {extras = ["all"], version = "^0.12.3"}
+pypdf = "^4.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
