--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pypdf = "^4.3.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.6"
+pytest = "^8.3.2"
 
 [build-system]
 requires = ["poetry-core"]
