pdf-organizer: minor cleanup
add sqlite3 files to gitignore,
rename database file to sqlite3 file ending
remove clean up of temp dir from unit test

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ cover/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+*.sqlite3
 
 # Flask stuff:
 instance/
@@ -162,3 +163,4 @@ cython_debug/
 
 # we don't want to include any pdf files for example
 *.pdf
+pdf_metadata.sqlite3
