frontend: add next.js based react app
let's build a react based frontend to visualize the
data that we stored in our database.

--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,4 @@ cython_debug/
 # we don't want to include any pdf files for example
 *.pdf
 pdf_metadata.sqlite3
+!/pdf-organizer-frontend/src/lib/
